--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-12">
                 <h4 class="text-primary">Welcome to Your Library !..</h4>
-                   <div class="mycard" ng-repeat="quote in hmCtrl.quotes">
+                   <div class="mycard mx-auto" ng-repeat="quote in hmCtrl.quotes">
                     <div class="myCard-body">
                        <h4>{{quote.quote}}</h4>
                        <p>{{quote.name | uppercase }}</p>
