--- a/books.html
+++ b/books.html
@@ -18,12 +18,12 @@
                 <div class="card" ng-repeat="book in Books | filter:(mySearch)">
                     <img ng-src={{book.source}} alt="img">
                     <div class="card-body">
-                        <div>
+                        <div class="card-body-left">
                             <h4><span>Book- </span>{{book.title}}</h4>
                             <h5><span>Author- </span> {{book.author}}</h5>
                             <h6><span>year- </span>{{book.year}}</h6>
                         </div>
-                        <div>
+                        <div class="card-body-right">
                             <button ng-click="addCart(book)">Add to cart</button>
                         </div>
                     </div>
